# antbed

./: .dockerignore  .gitignore  .pyre_configuration  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-compose.yaml  load-debug.py  pyproject.toml  ruff.toml  upload.json
.github/workflows/: ci.yml
antbed/: clients.py  config.py  embedding.py  init.py  models.py  search.py  splitdoc.py  store.py  version.py
antbed/agents/: agent.py  rag_query.py  rag_summary.py
antbed/clients/: embeddings.py
antbed/cmd/: main.py  server.py  tiktoken.py  worker.py
antbed/db/: models.py
antbed/migrations/: 00001_init.sql  00002_summary.sql  00003_embeddingsplit.sql  00004_addcollection.sql  00005_addupdatedat.sql  00006_multiple_summaries.sql
antbed/migrations/prompts/: ragquery.yaml
antbed/prompts/: rag_query.prompt.txt
antbed/server/: server.py
antbed/server/api/: antbed.py  job_info.py  search.py
antbed/temporal/: activities.py  client.py
antbed/temporal/workflows/: embedding.py  upload.py
antbed/vectordb/: base.py  manager.py  openaistore.py  qdrant.py
tests/: conftest.py  test_cmd_main.py  test_config.py  test_embedding.py  test_search.py  test_splitdoc.py  test_version.py
tests/agents/: test_rag_query.py  test_rag_summary.py
tests/data/: englisch_bgb.txt  test_config.yaml
tests/server/api/: test_antbed.py
tests/temporal/: test_client.py
tests/vectordb/: test_openaistore.py  test_qdrant.py
